@@ -41,7 +41,10 @@ filename.scanner.language.detection=true
 # comma separated list of case-insensitive keywords to ignore in filenames
 filename.scanner.skip.keywords=LIMITED,DiAMOND,AXXO,PUKKA,iDHD,PROPER,REPACK,DSR,STV,UNRATED,RERIP
 
-
+# Library relative directory to check for nfo files if they aren't found as part of the normal scan
+# Leave blank or undefined to ignore this search
+# Example library path = "D:\Videos\" then this will search in "D:\Videos\NFO\"
+filename.nfo.directory=NFO
 
 ######################################################
 ## Poster scanner
